# forkenizer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
data_examples/: numbers_and_math_examples.txt  sample_merges.txt  sample_vocab.json  tiny_corpus.txt
include/forkenizer/: ModelIO.hpp  PreTokenizer.hpp  Tokenizer.hpp
src/cli/: main.cpp
src/io/: ModelIO.cpp
src/tokenizer/: PreTokenizer.cpp  Tokenizer.cpp  Trie.hpp
src/trainer/: Trainer.cpp  Trainer.hpp
tests/: catch2_single_header.hpp
tests/unit/: test_encode_decode.cpp  test_numbers_math.cpp  test_pretokenizer.cpp
